--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "dependencies": {
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
-    "@mui/material": "6.3.0",
+    "@mui/material": "6.4.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "2.1.0"
+    "web-vitals": "4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,18 +42,25 @@
   "devDependencies": {
     "@jest/globals": "29.7.0",
     "@testing-library/dom": "10.4.0",
-    "@testing-library/jest-dom": "6.1.5",
-    "@testing-library/react": "14.1.2",
-    "@testing-library/user-event": "14.5.1",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.2.0",
+    "@testing-library/user-event": "14.6.1",
     "@types/jest": "29.5.14",
-    "@types/node": "16.7.13",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@types/node": "22.13.1",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "@types/testing-library__jest-dom": "6.0.0",
-    "eslint": "8.0.0",
-    "eslint-config-react-app": "6.0.0",
-    "eslint-plugin-jest": "28.10.0",
+    "@typescript-eslint/eslint-plugin": "8.23.0",
+    "@typescript-eslint/parser": "8.23.0",
+    "eslint": "8.57.0",
+    "eslint-config-react-app": "7.0.1",
+    "eslint-plugin-jest": "28.11.0",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.1.0",
     "jest": "29.7.0",
-    "typescript": "4.4.2"
+    "typescript": "5.7.3"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
