add personality app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
     "jsxImportSource": "react",
     "types": [
       "jest",
-      "@testing-library/jest-dom"
+      "@testing-library/jest-dom",
+      "react",
+      "react-dom",
     ],
   },
   "include": [
