--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@ node_modules
 .yarn
 .vscode
 build
-public
-static
+# public directory is needed for React build process
+# static assets are in public/static/
