--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,28 +1,33 @@
 {
-  "root": true,
-  "env": {
-    "node": true,
-    "es2022": true
-  },
-  "extends": [
-    "@typescript-eslint/recommended"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": 2022,
-    "sourceType": "module"
-  },
-  "plugins": [
-    "@typescript-eslint"
-  ],
-  "rules": {
-    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/no-explicit-any": "warn"
-  },
-  "ignorePatterns": [
-    "dist/**",
-    "node_modules/**",
-    "cdk.out/**"
-  ]
+    "root": true,
+    "env": {
+        "node": true,
+        "es2022": true
+    },
+    "extends": [
+        "@typescript-eslint/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": 2022,
+        "sourceType": "module"
+    },
+    "plugins": [
+        "@typescript-eslint"
+    ],
+    "rules": {
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "argsIgnorePattern": "^_"
+            }
+        ],
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/no-explicit-any": "warn"
+    },
+    "ignorePatterns": [
+        "dist/**",
+        "node_modules/**",
+        "cdk.out/**"
+    ]
 }
