--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,7 +1,9 @@
 {
     "extends": "../tsconfig.base.json",
     "compilerOptions": {
-        "module": "ESNext",
+        "module": "CommonJS",
+        "target": "ES2020",
+        "moduleResolution": "node",
         "outDir": "./dist",
         "rootDir": "./src",
         "declaration": true,
