--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ backend/dist
 backend/cdk.out
 # public directory is needed for React build process
 # static assets are in public/static/
+
+# Environment files
+.env.local
+*.env.local
