--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,25 +2,26 @@
     "name": "homepage-frontend",
     "version": "1.0.0",
     "private": true,
-    "packageManager": "bun@1.2.17",
+    "type": "module",
+    "packageManager": "bun@1.2.18",
     "dependencies": {
         "@emotion/react": "11.14.0",
-        "@emotion/styled": "11.14.0",
-        "@mui/icons-material": "7.1.2",
-        "@mui/material": "7.1.2",
-        "@rsbuild/core": "^1.1.8",
-        "@rsbuild/plugin-react": "^1.0.12",
-        "@rsbuild/plugin-type-check": "^1.0.5",
-        "@types/jest": "^30.0.0",
+        "@emotion/styled": "11.14.1",
+        "@mui/icons-material": "7.2.0",
+        "@mui/material": "7.2.0",
+        "@rsbuild/core": "1.4.3",
+        "@rsbuild/plugin-react": "1.3.3",
+        "@rsbuild/plugin-type-check": "1.2.3",
         "react": "19.1.0",
         "react-dom": "19.1.0",
-        "react-router-dom": "7.6.2",
+        "react-router-dom": "7.6.3",
         "web-vitals": "5.0.3"
     },
     "scripts": {
         "dev": "rsbuild dev",
         "build": "rsbuild build",
         "preview": "rsbuild preview",
+        "lint": "eslint src/**/*.{ts,tsx}",
         "test": "bun test",
         "type-check": "tsc --noEmit",
         "mbti-quality": "bun run src/apps/personality-test/testing/main.ts",
@@ -44,18 +45,23 @@
         ]
     },
     "devDependencies": {
+        "@eslint/js": "9.30.1",
         "@testing-library/dom": "10.4.0",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
         "@testing-library/user-event": "14.6.1",
-        "@types/bun": "^1.1.18",
-        "@types/node": "24.0.3",
+        "@types/bun": "1.2.18",
+        "@types/jest": "30.0.0",
+        "@types/node": "24.0.10",
         "@types/react": "19.1.8",
         "@types/react-dom": "19.1.6",
         "@types/testing-library__jest-dom": "6.0.0",
-        "@typescript-eslint/eslint-plugin": "8.34.1",
-        "@typescript-eslint/parser": "8.34.1",
-        "eslint": "8.57.0",
+        "@typescript-eslint/eslint-plugin": "8.35.1",
+        "@typescript-eslint/parser": "8.35.1",
+        "eslint": "9.30.1",
+        "eslint-plugin-react": "7.37.5",
+        "eslint-plugin-react-hooks": "5.2.0",
+        "globals": "16.3.0",
         "typescript": "5.8.3"
     }
 }
