--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,10 @@
     "type": "module",
     "packageManager": "bun@1.2.18",
     "dependencies": {
-        "@emotion/react": "11.14.0",
-        "@emotion/styled": "11.14.1",
-        "@mui/icons-material": "7.2.0",
-        "@mui/material": "7.2.0",
-        "@rsbuild/core": "1.4.3",
-        "@rsbuild/plugin-react": "1.3.3",
-        "@rsbuild/plugin-type-check": "1.2.3",
-        "react": "19.1.0",
-        "react-dom": "19.1.0",
-        "react-router-dom": "7.6.3",
-        "web-vitals": "5.0.3"
+        "@solidjs/router": "^0.14.7",
+        "@suid/icons-material": "^0.7.0",
+        "@suid/material": "^0.18.0",
+        "solid-js": "^1.9.7"
     },
     "scripts": {
         "dev": "rsbuild dev",
@@ -23,9 +16,7 @@
         "preview": "rsbuild preview",
         "lint": "eslint src/**/*.{ts,tsx} --no-warn-ignored",
         "test": "bun test",
-        "type-check": "tsc --noEmit",
-        "mbti-quality": "bun run src/apps/personality-test/testing/main.ts",
-        "dev:full": "bun run dev.ts"
+        "type-check": "tsc --noEmit"
     },
     "browserslist": {
         "production": [
@@ -40,22 +31,18 @@
         ]
     },
     "devDependencies": {
+        "@babel/core": "^7.28.0",
+        "@babel/preset-typescript": "^7.27.1",
         "@eslint/js": "9.30.1",
-        "@testing-library/dom": "10.4.0",
-        "@testing-library/jest-dom": "6.6.3",
-        "@testing-library/react": "16.3.0",
-        "@testing-library/user-event": "14.6.1",
-        "@types/bun": "1.2.18",
-        "@types/jest": "30.0.0",
+        "@rsbuild/core": "^1.4.3",
         "@types/node": "24.0.10",
-        "@types/react": "19.1.8",
-        "@types/react-dom": "19.1.6",
-        "@types/testing-library__jest-dom": "6.0.0",
+        "@types/testing-library__jest-dom": "^6.0.0",
         "@typescript-eslint/eslint-plugin": "8.35.1",
         "@typescript-eslint/parser": "8.35.1",
+        "babel-loader": "^10.0.0",
+        "babel-preset-solid": "^1.9.6",
         "eslint": "9.30.1",
-        "eslint-plugin-react": "7.37.5",
-        "eslint-plugin-react-hooks": "5.2.0",
+        "eslint-plugin-solid": "^0.14.3",
         "globals": "16.3.0",
         "typescript": "5.8.3"
     }
