--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,30 +1,45 @@
 {
-  "extends": "../tsconfig.base.json",
-  "compilerOptions": {
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ES2022"
-    ],
-    "module": "ESNext",
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "react",
-    "declaration": false,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
+    "compilerOptions": {
+        "jsx": "preserve",
+        "jsxImportSource": "solid-js",
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
+        "target": "ES2020",
+        "useDefineForClassFields": true,
+        "module": "ESNext",
+        "lib": [
+            "ES2020",
+            "DOM",
+            "DOM.Iterable"
+        ],
+        "skipLibCheck": true,
+        "types": [],
+        /* Bundler mode */
+        "moduleResolution": "bundler",
+        "allowImportingTsExtensions": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        /* Linting */
+        "strict": false,
+        "noUnusedLocals": false,
+        "noUnusedParameters": false,
+        "noFallthroughCasesInSwitch": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ]
+        }
     },
-    "types": [
-      "bun-types",
-      "@testing-library/jest-dom",
-      "react",
-      "react-dom"
+    "include": [
+        "src/**/*.ts",
+        "src/**/*.tsx",
+        "*.config.ts"
+    ],
+    "exclude": [
+        "src/**/*.test.*",
+        "src/**/*.spec.*",
+        "node_modules"
     ]
-  },
-  "include": [
-    "src"
-  ]
 }
