--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
         "@typescript-eslint/eslint-plugin": "8.35.1",
         "@typescript-eslint/parser": "8.35.1",
         "aws-cdk": "2.1020.2",
+        "bun-types": "1.2.18",
         "eslint": "9.30.1",
         "globals": "16.3.0",
         "typescript": "5.8.3"
